Add animação corações

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,700|Sniglet|Vibur" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="app.js"></script>
 </head>
 <body>
 
@@ -23,11 +25,16 @@
         <img src="images/cruLogo.png" />
       </div>
     </div>
+    <div class="animation stage">
+      <div class="heart icon"></div>
+      <div class="heart icon"></div>
+      <div class="heart icon"></div>
+    </div>
     <div class="hero title">
       <img src="images/herotitle.svg" class="person">
-    </div>
-    <div class="sub title">
-      1 de Julho, no Parque das Dunas
+      <div class="sub title">
+        1 de Julho, no Parque das Dunas
+      </div>
     </div>
     <div class="scroll icon">
       <img src="images/scroll.svg" class="person">
