--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
       <div class="heart icon"></i>
     </div>
     <p>
-      O Cantinho do Amor é um culto de gratidão a Deus pelo período letivo,
-      organizado pela CRU Natal. Você está convidado a dedicar esta data
-      conosco para agradecer ao Senhor por todas as suas bençãos e pelo seu
-      cuidado para com o seu povo.
+      O Cantinho do Amor é um culto de comunhão organizado pela CRU Natal.
+      Você está convidado a dedicar esta data conosco para agradecer ao Senhor
+      por todas as suas bençãos e pelo seu cuidado para com o seu povo.
     </p>
 
     <h2>Onde vai ser?</h2>
@@ -85,9 +84,7 @@
         <div class="content">
           <h2>Pregação da Palavra</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            euismod lacus et est vestibulum hendrerit dignissim sit amet risus.
-            Praesent congue enim quis risus iaculis ornare.
+            Teremos um momento de pregação da palavra de Deus.
           </p>
         </div>
       </div>
@@ -106,8 +103,8 @@
         <div class="content">
           <h2>Amigo Livro</h2>
           <p>
-            Faremos um Amigo Secreto com livros. Se inscreva utilizando este
-            formulário e nós enviaremos mais informações.
+            Faremos um Amigo Secreto com livros. Se inscreva no Cantinho do Amor
+            e nós enviaremos mais informações.
           </p>
         </div>
       </div>
@@ -121,8 +118,8 @@
     <div class="info">
       <div class="cantinho">
         <h1>Cantinho do Amor</h1>
-        <span>Daniel Santos: (84) 91234-4321</span>
-        <span>Inscreva-se!</span>
+        <span>Daniel Santos: (84) 9 8835-3023</span>
+        <span>Daniel Bastos: (84) 9 9686-9323</span>
       </div>
       <div class="cru">
         <h1>CRU Natal</h1>
