--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
-  <title>Replace</title>
+  <title>Cantinho do Amor</title>
+  <link rel="icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,700|Sniglet|Vibur" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
